# Physics

./: .gitignore  CMakeLists.txt
client/: index.html  package.json  vite.config.js
client/src/: App.vue
client/src/demos/: GolfDemo.vue
client/src/lib/: golf.js  units.js
examples/golf/: golf_physics.c  golf_physics.h  main.c
include/physics/: aerodynamics.h  collision.h  dynamics.h  kinematics.h  mat.h  physics.h  surface.h  types.h  vec.h
pkg/: index.d.ts  index.js  package.json
scripts/: build-wasm.sh
src/: aerodynamics.c  collision.c  dynamics.c  kinematics.c  mat.c  surface.c  vec.c  wasm_bindings.c
test/: test_aerodynamics.c  test_collision.c  test_dynamics.c  test_helpers.h  test_kinematics.c  test_main.c  test_mat.c  test_surface.c  test_vec.c
